Bug 893785 - Don't fire gamepadconnected events for windows that have already received them. r=smaug, a=bajaj